[tool.poetry]
name = "ohlc-crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
SQLAlchemy = "^2.0.22"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
pytz = "^2023.3.post1"
asyncio = "^3.4.3"
nest-asyncio = "^1.5.8"
asyncpg = "^0.28.0"

[tool.poetry.dev-dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "basic"